consegui fazer o solver funcionar direto no navegador!

--- a/content/operations-research/exercicio-1.4-otimizacao-linear.ipynb
+++ b/content/operations-research/exercicio-1.4-otimizacao-linear.ipynb
@@ -58,39 +58,134 @@
     },
     {
       "cell_type": "code",
-      "source": "problema.solve()",
+      "source": "import js\n# interceptar console\njs_code = r'''\n// Variável para armazenar as saídas capturadas\nvar console_output = \"\";\n\n// Função para interceptar console.log\nfunction extendLog(logger) {\n    var original = console.log;\n    console.log = function() {\n        logger(Array.prototype.slice.call(arguments));\n        return original.apply(this, arguments);\n    }\n}\nfunction recorder(args) {\n    console_output += args.join(' ') + '\\n'\n}\nfunction cls() {\n    console_output = '';\n}\nextendLog(recorder);\n'''\njs.eval(js_code)",
       "metadata": {
         "trusted": true
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": "from js import fetch, WebAssembly",
+      "source": "js.eval('''\n    console_output\n''')",
       "metadata": {
         "trusted": true
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "execution_count": 2,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "''"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "with open('glpsol.js', 'r') as f:\n    js_code = f.read()\njs.eval(js_code)",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": "response = await fetch('./content/cbc.wasm')",
+      "source": "js.eval('cls();');\njs.eval('''callMain(['--help']);''')",
       "metadata": {
         "trusted": true
       },
-      "execution_count": null,
+      "execution_count": 4,
+      "outputs": [
+        {
+          "execution_count": 4,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "0"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(js.eval('''\n    console_output\n'''))",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "",
+          "output_type": "stream"
+        },
+        {
+          "name": "stdout",
+          "text": "\n",
+          "output_type": "stream"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "from js import FS, callMain\nbasic_problem = '''\nMaximize\n obj: 3 x + 2 y\nSubject To\n constraint1: x + y <= 17\n constraint2: x - y <= 0\n constraint3: -x + y <= 0\nBounds\n 0 <= x\n 0 <= y\nEnd\n'''\nFS.writeFile('/problem.lp', basic_problem)",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": "print(await response.text())",
+      "source": "js.eval('''callMain([\"--lp\", \"/problem.lp\", \"-o\", \"/solution\"])''')",
       "metadata": {
         "trusted": true
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "execution_count": 43,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "0"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(js.eval('console_output'))",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "GLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp\nReading problem data from '/problem.lp'...\n1 row, 2 columns, 2 non-zeros\n9 lines were read\nGLPK Simplex Optimizer 5.0\n1 row, 2 columns, 2 non-zeros\nPreprocessing...\n1 row, 2 columns, 2 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 1\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (2)\n*     1: obj =   1.500000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp\nReading problem data from '/problem.lp'...\n1 row, 2 columns, 2 non-zeros\n9 lines were read\nGLPK Simplex Optimizer 5.0\n1 row, 2 columns, 2 non-zeros\nPreprocessing...\n1 row, 2 columns, 2 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 1\n*     0: obj =   0.000000000e+00 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp\nReading problem data from '/problem.lp'...\n/problem.lp:6: invalid symbol(s) beyond right-hand side\nCPLEX LP file processing error\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp\nReading problem data from '/problem.lp'...\n2 rows, 2 columns, 4 non-zeros\n10 lines were read\nGLPK Simplex Optimizer 5.0\n2 rows, 2 columns, 4 non-zeros\nPreprocessing...\n2 rows, 2 columns, 4 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  3.000e+00  ratio =  3.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 2\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (1)\n*     1: obj =   1.200000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp -o /solution\nReading problem data from '/problem.lp'...\n2 rows, 2 columns, 4 non-zeros\n10 lines were read\nGLPK Simplex Optimizer 5.0\n2 rows, 2 columns, 4 non-zeros\nPreprocessing...\n2 rows, 2 columns, 4 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  3.000e+00  ratio =  3.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 2\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (1)\n*     1: obj =   1.200000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nWriting basic solution to '/solution'...\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp -o /solution\nReading problem data from '/problem.lp'...\n1 row, 2 columns, 2 non-zeros\n9 lines were read\nGLPK Simplex Optimizer 5.0\n1 row, 2 columns, 2 non-zeros\nPreprocessing...\n1 row, 2 columns, 2 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 1\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (2)\n*     1: obj =   1.500000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nWriting basic solution to '/solution'...\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp -o /solution\nReading problem data from '/problem.lp'...\n1 row, 2 columns, 2 non-zeros\n9 lines were read\nGLPK Simplex Optimizer 5.0\n1 row, 2 columns, 2 non-zeros\nPreprocessing...\n1 row, 2 columns, 2 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 1\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (2)\n*     1: obj =   5.100000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nWriting basic solution to '/solution'...\nGLPSOL--GLPK LP/MIP Solver 5.0\nParameter(s) specified in the command line:\n --lp /problem.lp -o /solution\nReading problem data from '/problem.lp'...\n3 rows, 2 columns, 6 non-zeros\n11 lines were read\nGLPK Simplex Optimizer 5.0\n3 rows, 2 columns, 6 non-zeros\nPreprocessing...\n3 rows, 2 columns, 6 non-zeros\nScaling...\n A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\nProblem data seem to be well scaled\nConstructing initial basis...\nSize of triangular part is 3\n*     0: obj =  -0.000000000e+00 inf =   0.000e+00 (2)\n*     2: obj =   4.250000000e+01 inf =   0.000e+00 (0)\nOPTIMAL LP SOLUTION FOUND\nTime used:   0.0 secs\nMemory used: 0.0 Mb (30497 bytes)\nWriting basic solution to '/solution'...\n\n",
+          "output_type": "stream"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(FS.readFile('/solution', encoding='utf8'))",
+      "metadata": {
+        "trusted": true
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "Problem:    \nRows:       3\nColumns:    2\nNon-zeros:  6\nStatus:     OPTIMAL\nObjective:  obj = 42.5 (MAXimum)\n\n   No.   Row name   St   Activity     Lower bound   Upper bound    Marginal\n------ ------------ -- ------------- ------------- ------------- -------------\n     1 constraint1  NU            17                          17           2.5 \n     2 constraint2  NU             0                           0           0.5 \n     3 constraint3  B              0                           0 \n\n   No. Column name  St   Activity     Lower bound   Upper bound    Marginal\n------ ------------ -- ------------- ------------- ------------- -------------\n     1 x            B            8.5             0               \n     2 y            B            8.5             0               \n\nKarush-Kuhn-Tucker optimality conditions:\n\nKKT.PE: max.abs.err = 0.00e+00 on row 0\n        max.rel.err = 0.00e+00 on row 0\n        High quality\n\nKKT.PB: max.abs.err = 0.00e+00 on row 0\n        max.rel.err = 0.00e+00 on row 0\n        High quality\n\nKKT.DE: max.abs.err = 0.00e+00 on column 0\n        max.rel.err = 0.00e+00 on column 0\n        High quality\n\nKKT.DB: max.abs.err = 0.00e+00 on row 0\n        max.rel.err = 0.00e+00 on row 0\n        High quality\n\nEnd of output\n\n",
+          "output_type": "stream"
+        }
+      ]
     },
     {
       "cell_type": "code",
